--- a/README
+++ b/README
@@ -13,3 +13,32 @@ Os cartões acessam dados pelo Wifi é os pais podem programar o conteúdo.
 Desafortunadamente, actualmente a maiora das cartas vendidas por Yoto são em inglês americano (com alguns em français ou español latino).
 Sendo que os pais podem programar o conteudo dos cartões, aqui debaixo recomendo alguns recursos em Português para familias lusofonas.
 A minha familia fala português europeu, então enfoco em recursos que são ou em português europeu, ou que está em sotaque que eu, falante não nativa, consigo perceber :)
+
+====
+
+RÁDIO:
+
+Radio ZigZag (RTP)
+https://radiocast.rtp.pt/zigzag80a.mp3  ￼
+
+Canal Miudos
+
+Canal Miudinhos
+
+----
+
+AUDIOLIVROS:
+
+A menina do mar -- Sophia de Mello Breyner
+https://www.youtube.com/watch?v=qJyMLokcUXo
+
+O Principezinho -- Antoine de St. Exupery
+https://libro.fm/audiobooks/9781982771546-o-principezinho?srsltid=AfmBOop5asI7OIMPIIpjZzmc2jTBJVL0bBfNwW8J06CjCbey9USv0kqG
+
+----
+
+PODCASTS:
+
+Bem mais que uma hístoria
+https://bemmaisqueumahistoria.pt/
+(Favorito do meu filho de 4 anos)
