--- a/README
+++ b/README
@@ -21,19 +21,24 @@ RÁDIO:
 Radio ZigZag (RTP)
 https://radiocast.rtp.pt/zigzag80a.mp3  ￼
 
-Canal Miudos
-
-Canal Miudinhos
+Radio Miudos
+https://radiomiudos.pt/
 
 ----
 
-AUDIOLIVROS:
+AUDIOLIVROS: (yt-dlp and ffmpeg can convert to Yoto format)
 
 A menina do mar -- Sophia de Mello Breyner
 https://www.youtube.com/watch?v=qJyMLokcUXo
 
 O Principezinho -- Antoine de St. Exupery
 https://libro.fm/audiobooks/9781982771546-o-principezinho?srsltid=AfmBOop5asI7OIMPIIpjZzmc2jTBJVL0bBfNwW8J06CjCbey9USv0kqG
+
+Audiocontos Disney
+https://www.youtube.com/playlist?list=PLesApWsbR4yCPG-CtF6Dp4ReGjQ4REIBc
+
+Conta Contos Disney
+https://www.youtube.com/playlist?list=PLesApWsbR4yD6GjQ9obTvYNxBAmrgj_II
 
 ----
 
