--- a/README
+++ b/README
@@ -40,6 +40,9 @@ https://www.youtube.com/playlist?list=PLesApWsbR4yCPG-CtF6Dp4ReGjQ4REIBc
 Conta Contos Disney
 https://www.youtube.com/playlist?list=PLesApWsbR4yD6GjQ9obTvYNxBAmrgj_II
 
+Historias Pingo Doce (Era Uma Vez...)
+https://www.youtube.com/playlist?list=PLhYJUL0k4TAfPBCXHomxmdaNOim98VIh4
+
 ----
 
 PODCASTS:
